--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "expo": "~36.0.0",
+    "expo-linear-gradient": "^8.0.0",
     "expo-location": "~8.0.0",
+    "prop": "^0.1.1",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
